rules.v4
# Generated by iptables-save v1.4.21 on Sun Sep 27 10:46:34 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [102:9248]
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m icmp ! --icmp-type 8 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8032 -j ACCEPT
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "addons.mozilla." --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "cdn." --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "apis.google.com" --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "fsdn." --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "ib.adnxs.com" --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "clients.google." --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "googleusercontent" --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string ".cloudfront.net" --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "trueconf" --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "fonts.googleapis." --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "maps.googleapis." --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "google-analytics." --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "api.solvemedia." --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "analytics.yahoo." --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "data.mozilla." --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "ajax.googleapis." --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "i.imgur.com" --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "adnxs.com" --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "ssl.fastly.net" --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "s0.wp.com" --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "googleusercontent." --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "s.m2pub.com" --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "cf.ads.kontextua." --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "cdnjs.cloudflare.com" --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "es-static0.infojobs." --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "adf.ly" --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "gstatic.com" --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "cloudfront.net" --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "zotero.org" --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "googleusercontent.com" --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "gvt1.com" --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "ping.chartbeat.net" --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
-A OUTPUT -d 10.0.0.1/32 -p tcp -m string --string "aus4.mozilla.org" --algo kmp --to 65535 -j REJECT --reject-with tcp-reset
COMMIT
# Completed on Sun Sep 27 10:46:34 2015
